# FLowCraft

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  testwidget.cpp  testwidget.h
Common/GraphicsFactory/: GraphicsButtonFactory.cpp  GraphicsButtonFactory.h  GraphicsChartFactory.cpp  GraphicsChartFactory.h  GraphicsFactory.cpp  GraphicsFactory.h  GraphicsLabelFactory.cpp  GraphicsLabelFactory.h  GraphicsNodeFactory.cpp  GraphicsNodeFactory.h  GraphicsPictureBoxFactory.cpp  GraphicsPictureBoxFactory.h  GraphicsPortFactory.cpp  GraphicsPortFactory.h  GraphicsSwitchButtonFactory.cpp  GraphicsSwitchButtonFactory.h  GraphicsTextFactory.cpp  GraphicsTextFactory.h
Entity/: GraphicsItemInfoConfig.cpp  GraphicsItemInfoConfig.h  GraphicsNodeConnectionControlBlock.cpp  GraphicsNodeConnectionControlBlock.h  GraphicsNodeControlBlock.cpp  GraphicsNodeControlBlock.h
Globe/: AudioPlayer.cpp  AudioPlayer.h  BuiltRunManager.cpp  BuiltRunManager.h  DataType.h  Enum.h  GraphicsItemCreator.cpp  GraphicsItemCreator.h  GraphicsItemManager.cpp  GraphicsItemManager.h  GraphicsItemParser.cpp  GraphicsItemParser.h  Loader.cpp  Loader.h  Map.h  PortAssignor.cpp  PortAssignor.h  RuningConfig.cpp  RuningConfig.h  Saver.cpp  Saver.h
Graphics/Entity/: RubberEntity.cpp  RubberEntity.h
Graphics/GraphicsItem/: GraphicsButton.cpp  GraphicsButton.h  GraphicsChart.cpp  GraphicsChart.h  GraphicsGroup.cpp  GraphicsGroup.h  GraphicsItem.cpp  GraphicsItem.h  GraphicsLable.cpp  GraphicsLable.h  GraphicsNode.cpp  GraphicsNode.h  GraphicsPictureBox.cpp  GraphicsPictureBox.h  GraphicsPort.cpp  GraphicsPort.h  GraphicsPreviewItem.cpp  GraphicsPreviewItem.h  GraphicsSwitchButton.cpp  GraphicsSwitchButton.h  GraphicsText.cpp  GraphicsText.h  GraphicsTip.cpp  GraphicsTip.h
Graphics/GraphicsLine/: GraphicsLineItem.cpp  GraphicsLineItem.h  GraphicsLineItemBeziercurveitem.cpp  GraphicsLineItemBeziercurveitem.h  GraphicsRubberLine.cpp  GraphicsRubberLine.h
Graphics/GraphicsView/: Graphicsview.cpp  Graphicsview.h
Graphics/Info/: ButtonInfo.cpp  ButtonInfo.h  ChartInfo.cpp  ChartInfo.h  GroupInfo.cpp  GroupInfo.h  ItemInfo.cpp  ItemInfo.h  LineInfo.cpp  LineInfo.h  NodeInfo.cpp  NodeInfo.h  PictureBoxInfo.cpp  PictureBoxInfo.h  PortInfo.cpp  PortInfo.h  SwitchButtonInfo.cpp  SwitchButtonInfo.h  TextInfo.cpp  TextInfo.h  labelInfo.cpp  labelInfo.h
ProjectTemplate/向量和矩阵/: .description  .tag
ProjectTemplate/向量和矩阵/config/Them/浅色/: PortColorConfig.json
ProjectTemplate/向量和矩阵/config/Them/默认/: GraphicsViewConfig.json
ProjectTemplate/向量和矩阵/nodes/向量/: 三维向量分解  三维向量输入
ProjectTemplate/向量和矩阵/nodes/显示/: 3×3矩阵显示  三维向量显示  文本
ProjectTemplate/向量和矩阵/nodes/矩阵/: 3×3矩阵分解向量  3×3矩阵输入  4×4矩阵输入  任意矩阵分解
ProjectTemplate/向量和矩阵/nodes/程序/: 开始  结束
ProjectTemplate/向量和矩阵/nodes/运算/向量/: 三维向量减  三维向量加  三维向量叉乘  三维向量点乘
ProjectTemplate/向量和矩阵/nodes/运算/矩阵/: 矩阵乘  矩阵减  矩阵加
ProjectTemplate/向量和矩阵/script/向量/: 三维向量分解.xs  三维向量显示.xs  三维向量输入.xs
ProjectTemplate/向量和矩阵/script/矩阵/: 33矩阵分解向量.xs  33矩阵显示.xs  33矩阵输入.xs  44矩阵输入.xs  任意矩阵分解.xs
ProjectTemplate/向量和矩阵/script/运算/: 乘.xs  点乘.xs
ProjectTemplate/数字逻辑/: .description  .tag
ProjectTemplate/数字逻辑/nodes/器件/: J-K触发器  二路示波器  四路示波器  整数01震荡器  示波器  翻转器
ProjectTemplate/数字逻辑/nodes/显示/: 无背景文本
ProjectTemplate/数字逻辑/nodes/程序/: 开始
ProjectTemplate/数字逻辑/nodes/输入/: 开关  真开关  输入
ProjectTemplate/数字逻辑/nodes/运算/: 与  与(图形)  乘  减  加  或  除  非
ProjectTemplate/数字逻辑/script/器件/: JK触发器.xs  整数01震荡器.xs  翻转器.xs
ProjectTemplate/数字逻辑/script/实验/: test.xs
ProjectTemplate/数字逻辑/script/显示/: 二路示波器.xs  四路示波器.xs  折线图.xs  示波器.xs
ProjectTemplate/数字逻辑/script/输入/: 01输入.xs
ProjectTemplate/数字逻辑/script/运算/: Add.xs  Or.xs  Sub.xs
ProjectTemplate/空模板/: .description  .tag
ProjectTemplate/空模板/config/Them/默认/: GraphicsViewConfig.json
ProjectTemplate/空模板/script/: testscript.xs
ProjectTemplate/空模板/script/器件/: 整数自增器.xs
ProjectTemplate/空模板/script/显示/: 示波器.xs
ProjectTemplate/空模板/script/输入/: StringInput.xs
ProjectTemplate/空模板/script/运算/: And.xs  Div.xs  Not.xs
ProjectTemplate/通用计算/: .description  .fcp  .tag
ProjectTemplate/通用计算/config/Them/浅色/: GraphicsViewConfig.json
ProjectTemplate/通用计算/nodes/器件/: 01翻转器  整数自增器
ProjectTemplate/通用计算/nodes/实验/: 实验节点  计算器界面设计
ProjectTemplate/通用计算/nodes/显示/图表/: 坐标点图
ProjectTemplate/通用计算/nodes/显示/文本/: 红白文本
ProjectTemplate/通用计算/nodes/程序/: 结束
ProjectTemplate/通用计算/nodes/输入/: 字符串输入  小数输入  开关  整数输入  比特输入  逻辑输入
ProjectTemplate/通用计算/nodes/运算/小数/: 乘  减  加  除
ProjectTemplate/通用计算/nodes/运算/整数/: 乘  减  加  除
ProjectTemplate/通用计算/nodes/运算/逻辑/: 与  或  非
ProjectTemplate/通用计算/script/实验/: 计算器.xs
ProjectTemplate/通用计算/script/显示/: 二路示波器.xs  四路示波器.xs
ProjectTemplate/通用计算/script/输入/: Input_1.xs
Resource/: Resource.qrc
Resource/HelpPage/: index.html  style.css
Resource/HelpPage/Pages/: Softwareinterface.html
Resource/Script/: Int_Add.x
Resource/icon/: deleteLine.psd  deleteNode.psd  select.psd  未标题-1.psd  未标题ss-1.psd
Script/: CodeLine.h  ScriptObject.cpp  ScriptObject.h
Script/Handle/: ExpressionParser.cpp  ExpressionParser.h
Script/Handle/Functions/: ChartFunction.h  MathFunction.h  NetWorkFunction.h
UI/Editor/: MainWindow.cpp  MainWindow.h  MainWindow.ui
UI/Launcher/: CreatNewProject.cpp  CreatNewProject.h  CreatNewProject.ui  Launcher.cpp  Launcher.h  Launcher.ui
UI/Widgets/: NodeTreeWidget.cpp  NodeTreeWidget.h
UI/Widgets/CodeEditor/: CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  Highlighter.h
UI/Widgets/ToolWidget/: ProjectItem.cpp  ProjectItem.h  ProjectItem.ui  SettingWidget.cpp  SettingWidget.h  SettingWidget.ui  TemplateItemWidget.cpp  TemplateItemWidget.h  TemplateItemWidget.ui  nodeeditorwidget.cpp  nodeeditorwidget.h  nodeeditorwidget.ui
Utility/InterpreterUtility/: Interpreter.cpp  Interpreter.h
Utility/JsonUtility/: JsonUtility.cpp  JsonUtility.h
qtpropertybrowser/: qteditorfactory.cpp  qteditorfactory.h
